# composite-message

./: CMakeLists.txt  README.md
.github/workflows/: ci.yaml
composite-message/: CMakeLists.txt
composite-message/include/: composite_message.h
composite-message/src/: composite_message.c
tests/: CMakeLists.txt  CompositeMessageTest.cpp
